--- a/src/style/costum.scss
+++ b/src/style/costum.scss
@@ -96,9 +96,6 @@ aside {
   margin: 16px;
   background: rgba(255, 255, 255, 0.2);
 }
-.site-layout .site-layout-background {
-  background: #fff;
-}
 .logo {
   margin: 16px;
   // background: rgb(255, 255, 255);
@@ -125,11 +122,16 @@ aside {
 }
 
 .site-layout .site-layout-background {
-  background: #fff;
+  background: rgba(255, 255, 255, 0.75);
+  box-shadow: 0px 10px 10px 0  #3f3e3e;
 }
 
 .loginConteiner {
   height: 100vh;
+  background:url("./backgroundPtJulia.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   // width: 100vh;
   display: flex;
   justify-content: center;
@@ -147,6 +149,31 @@ aside {
     }
   }
 }
+.loginConteiner::before{
+  content: "";
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    background-color: rgba(255, 255, 255, 0.74);
+}
+.ant-layout{
+  background:url("./backgroundPtJuliaBright.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+}
+// .ant-layout::before{
+//   content: "";
+//     position: absolute;
+//     top: 0px;
+//     right: 0px;
+//     bottom: 0px;
+//     left: 0px;
+//     background-color: rgba(255, 255, 255, 0.74);
+// }
 // .ant-menu-item {
 //   span {
 //     color: #ffffff;
